# xsd2cpp

./: .gitignore  CMakeLists.txt  README.md
backup/: main.cpp
cmake/: ModuleGtest.cmake
src/: DataType.h  XSDParser.h  comment.h  functions.h  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/xsd2cpp_lib/: CMakeLists.txt  CodeGenerator.h  DataType.h  XSDParser.h  xsd2cpp.cpp
test/: CMakeLists.txt  LibTest.cpp  OpenDRIVE_1.5M.h  OpenDRIVE_1.5M.xsd  main.cpp  parser.cpp
test/lib/: Attribute.h
test/resources/: header.txt
